# lamellae

./: .gitignore  Cargo.toml  README.md
benches/: bench_batched.rs  benches.rs
src/: buffer.rs  consumer.rs  interruption_tracker.rs  lib.rs  producer.rs  reservation.rs  slot_tracker.rs  spinlock.rs  wrapper.rs
tests/: channel_init_tests.rs  integration_tests.rs  rc_tests.rs
tests/compile_errors/: capacity_below_cache_line_threshold_fails.rs  capacity_below_cache_line_threshold_fails.stderr  element_size_exceeds_cache_line_fails.rs  element_size_exceeds_cache_line_fails.stderr  non_power_of_two_capacity_fails.rs  non_power_of_two_capacity_fails.stderr  zst_element_fails.rs  zst_element_fails.stderr
