[package]
name = "lamellae"
version = "0.1.0"
edition = "2024"
description = "A highly optimized SPSC"
readme = "README.md"
repository = "https://github.com/Chuck-ie/lamellae"
license = "MIT"

[dependencies]

[dev-dependencies]
trybuild = "1.0"
criterion = "0.8"
rtrb = "0.3"

[[test]]
name = "channel_init_tests"
path = "tests/channel_init_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[profile.bench]
debug = true
strip = false
opt-level = 3
codegen-units = 1
lto = true
split-debuginfo = "off"
force-frame-pointers = true

[[bench]]
name = "benches"
harness = false


[[bench]]
name = "bench_batched"
harness = false
